Install utilities from main var files

--- a/src/ansible/roles/applications/tasks/main.yml
+++ b/src/ansible/roles/applications/tasks/main.yml
@@ -2,8 +2,7 @@
 
 - name: Install utilities
   package:
-    name:
-      - tree
-      - shellcheck
+    name: "{{ item }}"
     state: latest
   become: yes
+  loop:  "{{ utilities }}"
