Dont run cloudalchemy for now
It doesnt seem to support F34 for some reason

--- a/src/ansible/playbook.yaml
+++ b/src/ansible/playbook.yaml
@@ -6,7 +6,7 @@
   # pre_tasks:
   roles:
     - nodeexporter
-    - cloudalchemy.node_exporter
+    # - cloudalchemy.node_exporter
     - applications
     - rust
     - personalrepos
