Install Rust dependancies from top level vars

--- a/src/ansible/roles/rust/tasks/main.yml
+++ b/src/ansible/roles/rust/tasks/main.yml
@@ -4,13 +4,9 @@
 
 - name: Install dependencies
   package:
-    name:
-      - libssl-dev
-      - pkg-config
-      - postgresql-client-common # Needed for zero2prod
-      - postgresql-client-12
-      - build-essential
+    name: "{{ item }}"
     state: latest
+  loop: "{{ rust_dependancies }}"
   become: yes
 
 - name: Install rustup
