Try to setup cargo on current shell
I think Ansible uses different shells for each command.

Not sure how to handle this one cleanly.. Possibly use absolute paths

--- a/src/ansible/roles/rust/tasks/main.yml
+++ b/src/ansible/roles/rust/tasks/main.yml
@@ -12,6 +12,10 @@
 - name: Install rustup
   shell: curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
 
+- name: Setup cargo on current shell
+  shell: source {{ lookup('env','HOME') }}/.cargo/env
+
+#FIXME This doesnt work first time despite above comand working...
 - name: Install sqlx-cli
   shell: cargo install --locked --version={{ sqlx_version }} sqlx-cli --no-default-features --features postgres
 
