--- a/src/ansible/playbook.yaml
+++ b/src/ansible/playbook.yaml
@@ -3,7 +3,9 @@
   hosts: 127.0.0.1
   connection: local
   # tasks:
-  # pre_tasks:
+  pre_tasks:
+    - name: Install required roles
+      local_action: command ansible-galaxy install geerlingguy.postgresql cloudalchemy.node_exporter
   roles:
     - nodeexporter
     # - cloudalchemy.node_exporter
