--- a/src/ansible/playbook.yaml
+++ b/src/ansible/playbook.yaml
@@ -8,7 +8,8 @@
       local_action: command ansible-galaxy install geerlingguy.postgresql cloudalchemy.node_exporter
   roles:
     - nodeexporter
-    # - cloudalchemy.node_exporter
+    # FIXME Likely failing due to https://github.com/ansible/ansible/blob/870f9433655b08927200db2984cff816de43eb80/lib/ansible/utils/encrypt.py#L144
+    - cloudalchemy.node_exporter
     - applications
     - rust
     - personalrepos
@@ -18,11 +19,3 @@
   vars_files:
       - "vars/common.yml"
       - [ "vars/{{ ansible_facts['distribution'] | lower }}.yml", "vars/os_defaults.yml" ]
-  vars:
-    node_exporter_tls_server_config:
-      cert_file: /etc/node_exporter/certificate.pem
-      key_file: /etc/node_exporter/private.pem
-    node_exporter_basic_auth_users:
-      randomuser: examplepassword 
-  # - name: Install required roles
-  #   local_action: command ansible-galaxy install geerlingguy.postgresql cloudalchemy.node_exporter
