Add library install section

--- a/src/ansible/roles/applications/tasks/main.yml
+++ b/src/ansible/roles/applications/tasks/main.yml
@@ -6,3 +6,10 @@
     state: latest
   become: yes
   loop:  "{{ utilities }}"
+
+- name: Install libraries
+  package:
+    name: "{{ item }}"
+    state: latest
+  become: yes
+  loop:  "{{ libraries }}"
