--- a/src/ansible/vars/common.yml
+++ b/src/ansible/vars/common.yml
@@ -13,3 +13,13 @@ github_repository_names:
   # FIXME Currently empty - scones-ie
 dotfiles_repository: https://github.com/Darrenmeehan/dotfiles
 # qmk_repository:
+
+node_exporter_tls_server_config:
+  cert_file: /etc/node_exporter/certificate.pem
+  key_file: /etc/node_exporter/private.pem
+node_exporter_basic_auth_users:
+  randomuser: examplepassword 
+
+libraries:
+  - python3-cryptography
+  - python3-pyOpenSSL
