--- a/src/ansible/roles/rust/tasks/main.yml
+++ b/src/ansible/roles/rust/tasks/main.yml
@@ -1,36 +1,30 @@
 ---
-# tasks file for rust
-# FIXME Only works for Ubuntu
 
-- name: Install dependencies
+- name: install dependencies
   package:
     name: "{{ item }}"
     state: latest
   loop: "{{ rust_dependancies }}"
   become: yes
 
-- name: Install rustup
+- name: install rustup
   shell: curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
 
-- name: Setup cargo on current shell
+- name: update
+  shell: rustup update
+
+- name: install nightly
+  shell: rustup toolchain install nightly
+
+- name: setup cargo on current shell
   shell: source {{ lookup('env','HOME') }}/.cargo/env
 
-#FIXME This doesnt work first time despite above comand working...
-- name: Install sqlx-cli
+# FIXME This doesnt work first time despite above comand working...
+- name: install sqlx-cli
   shell: cargo install --locked --version={{ sqlx_cli_version }} sqlx-cli --no-default-features --features postgres
 
-- name: Install cargo-edit
-  shell: cargo install cargo-edit
+- name: install cargo-edit
+  shell: cargo install cargo-edit --force
 
-
-  # curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh
-# https://docs.ansible.com/ansible/latest/collections/ansible/builtin/uri_module.html
-# Needed for zero2prod
-
-# I cloned my repo which was already available online at
-
-# Though I needed to install `sqlx`.
-
-# ```
-# cargo install --locked --version=0.5.1 sqlx-cli --no-default-features --features postgres
-# ```
+- name: install wrangler
+  shell: cargo install wrangler --force
