--- a/src/ansible/playbook.yaml
+++ b/src/ansible/playbook.yaml
@@ -7,15 +7,17 @@
     - name: Install required roles
       local_action: command ansible-galaxy install geerlingguy.postgresql cloudalchemy.node_exporter
   roles:
+    - prometheus
+    - applications
     - nodeexporter
     # FIXME Likely failing due to https://github.com/ansible/ansible/blob/870f9433655b08927200db2984cff816de43eb80/lib/ansible/utils/encrypt.py#L144
-    - cloudalchemy.node_exporter
-    - applications
+    # - cloudalchemy.node_exporter
     - rust
     - personalrepos
     - dotfiles
     - { role: docker, when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu' }
     - archivebox
+    - starship
   vars_files:
       - "vars/common.yml"
       - [ "vars/{{ ansible_facts['distribution'] | lower }}.yml", "vars/os_defaults.yml" ]
