Cleanup node_exporter role

--- a/src/ansible/roles/nodeexporter/tasks/main.yml
+++ b/src/ansible/roles/nodeexporter/tasks/main.yml
@@ -1,23 +1,44 @@
 ---
-- name: Create node_exporter cert dir
+- name: create node_exporter cert dir
   file:
-    path: "/etc/node_exporter"
+    path: /etc/node_exporter
     state: directory
-    owner: root
-    group: root
+    owner: node_exporter
+    group: node_exporter
   become: yes
-- openssl_privatekey:
+
+- name: create private key
+  openssl_privatekey:
     path: /etc/node_exporter/private.pem
     size: 8096
   become: yes
-- openssl_csr:
+
+- name: create certificate signing request
+  openssl_csr:
+    common_name: localhost
     path: /etc/node_exporter/csr.pem
     privatekey_path: /etc/node_exporter/private.pem
   become: yes
-- name: Create cert and key
+
+- name: create cert and key
   openssl_certificate:
     csr_path: /etc/node_exporter/csr.pem
     path: /etc/node_exporter/certificate.pem
     privatekey_path: /etc/node_exporter/private.pem
     provider: selfsigned
+  become: yes
+
+- name: copy config.yaml
+  copy:
+    src: config.yaml
+    dest: /etc/node_exporter/config.yaml
+  become: yes
+
+- name: recursively set ownership of a /etc/node_exporter/
+  ansible.builtin.file:
+    path: /etc/node_exporter/
+    state: directory
+    recurse: yes
+    owner: node-exp
+    group: node-exp
   become: yes
