--- a/src/ansible/playbook.yaml
+++ b/src/ansible/playbook.yaml
@@ -9,8 +9,7 @@
       dnf:
         update_cache: yes
         update_only: yes
-      when: true
-      # when:  "{{ ansible_facts[‘os_family’] }} == 'RedHat'"
+      when: ansible_facts['distribution'] == 'Fedora'
       become: yes
   roles:
     - prometheus
