--- a/src/ansible/vars/default.yml
+++ b/src/ansible/vars/default.yml
@@ -4,7 +4,7 @@ utilities:
   - tree
   - shellcheck
 
-rust_dependancies:
+rust_dependencies:
   - libssl-dev
   - pkg-config
   - postgresql-client-common # Needed for zero2prod
