--- a/src/ansible/ansible.cfg
+++ b/src/ansible/ansible.cfg
@@ -1,4 +1,6 @@
 [defaults]
+nocows = True
+inventory = ./inventory.ini
 roles_path    = /home/darren/.ansible/roles/
 retry_files_enabled = False
 stdout_callback = yaml
