--- a/inventory.ini
+++ b/inventory.ini
@@ -1,2 +1,11 @@
 [photos]
 192.168.8.112 ansible_user=darren
+
+[monitoring]
+192.168.8.225 ansible_user=darren
+
+[proxmox-initial]
+192.168.8.215 ansible_user=root
+
+; [proxmox]
+; 192.168.8.215 ansible_user=darren
