--- a/main.yml
+++ b/main.yml
@@ -1,4 +1,19 @@
 ---
+- hosts: proxmox-initial
+  become: false
+  vars_files:
+    - default.config.yml
+    - vars/config.yml
+  pre_tasks:
+    - name: Include playbook configuration
+      include_vars: "{{ item }}"
+      with_fileglob:
+        - "{{ playbook_dir }}/vars/config.yml"
+        - "{{ playbook_dir }}/{{ lookup('env','USER') }}.yml"
+      tags: ['always']
+  tasks:
+    - import_tasks: tasks/access.yml
+
 - hosts: photos
   become: true
   vars_files:
