Add terraform with initial VM

--- a/inventory.ini
+++ b/inventory.ini
@@ -4,8 +4,17 @@
 [monitoring]
 192.168.8.225 ansible_user=darren
 
-[proxmox-initial]
+[proxmox]
 192.168.8.215 ansible_user=root
 
-; [proxmox]
-; 192.168.8.215 ansible_user=darren
+[k0s]
+192.168.8.122 ansible_user=darren
+
+[octoprint]
+192.168.8.122 ansible_user=darren
+
+[step_ca]
+192.168.8. ansible_user=darren
+
+[dev]
+192.168.8. ansible_user=darren
