--- a/tasks/proxmox.yml
+++ b/tasks/proxmox.yml
@@ -1,3 +1,13 @@
 ---
 
+- name: Install qemu tools
+  become: true
+  package:
+    name: libguestfs-tools
+    state: present
+    update_cache: true
+
+# https://docs.ansible.com/ansible/latest/collections/community/general/proxmox_kvm_module.html
+# https://docs.ansible.com/ansible/latest/collections/community/general/proxmox_module.html#examples
+
 # https://gainanov.pro/eng-blog/sysad/proxmox-remove-subscription-notice/
