Update IP addresses

--- a/inventory.ini
+++ b/inventory.ini
@@ -11,10 +11,10 @@
 192.168.8.122 ansible_user=darren
 
 [octoprint]
-192.168.8.122 ansible_user=darren
+192.168.8.8 ansible_user=darren
 
-[step_ca]
-192.168.8. ansible_user=darren
+[certs]
+192.168.8.81 ansible_user=darren
 
 [dev]
-192.168.8. ansible_user=darren
+192.168.8.183 ansible_user=darren
