Update IP addresses

--- a/inventory.ini
+++ b/inventory.ini
@@ -1,8 +1,8 @@
 [photos]
-192.168.8.112 ansible_user=darren
+192.168.8.112 ansible_user=vagrant
 
 [monitoring]
-192.168.8.225 ansible_user=darren
+192.168.8.225 ansible_user=vagrant
 
 [proxmox]
 192.168.8.215 ansible_user=root
@@ -11,10 +11,10 @@
 192.168.8.122 ansible_user=darren
 
 [octoprint]
-192.168.8.8 ansible_user=darren
+192.168.8.221 ansible_user=vagrant
 
 [certs]
-192.168.8.81 ansible_user=darren
+192.168.8.223 ansible_user=vagrant
 
 [dev]
-192.168.8.183 ansible_user=darren
+192.168.8.222 ansible_user=vagrant
