--- a/inventory.ini
+++ b/inventory.ini
@@ -1,20 +1,26 @@
 [photos]
-192.168.8.112 ansible_user=vagrant
+192.168.8.127 ansible_user=vagrant
 
-[monitoring]
-192.168.8.225 ansible_user=vagrant
+; [monitoring]
+; 192.168.8.225 ansible_user=vagrant
 
 [proxmox]
 192.168.8.215 ansible_user=root
 
 [k0s]
-192.168.8.122 ansible_user=darren
+192.168.8.120 ansible_user=vagrant
 
 [octoprint]
-192.168.8.221 ansible_user=vagrant
+192.168.8.124 ansible_user=vagrant
 
 [certs]
-192.168.8.223 ansible_user=vagrant
+192.168.8.121 ansible_user=vagrant
 
 [dev]
-192.168.8.222 ansible_user=vagrant
+192.168.8.126 ansible_user=vagrant
+
+; [haos81]
+; 192.168.8.129 ansible_user=vagrant
+
+[pihole]
+192.168.8.125 ansible_user=vagrant
