--- a/main.yml
+++ b/main.yml
@@ -26,21 +26,9 @@
     - import_tasks: tasks/access.yml
     - import_tasks: tasks/proxmox.yml
 
-- hosts: k0s
-  become: false
-  vars_files:
-    - default.config.yml
-  pre_tasks:
-    - name: Include playbook configuration
-      include_vars: "{{ item }}"
-      with_fileglob:
-        - "{{ playbook_dir }}/config.yml"
-        - "{{ playbook_dir }}/{{ lookup('env','USER') }}.yml"
-      tags: ['always']
-  # tasks:
-    # - import_tasks: tasks/docker.yml
-  roles:
-- hosts: photos
+- hosts:
+    - apps
+    - pihole
   become: true
   vars_files:
     - default.config.yml
@@ -53,26 +41,13 @@
       tags: ['always']
   tasks:
     - import_tasks: tasks/docker.yml
-    - import_tasks: tasks/photoprism.yml
-    - import_tasks: tasks/syncthing.yml
-  roles:
-    - role: caddy_ansible.caddy_ansible
-      caddy_config: |
-        {
-          debug
-        }
-        photos.scones.ie:443 {
-          reverse_proxy localhost:2342 {
-          }
-          tls internal
-        }
-        syncthing.photos.scones.ie:443 {
-          reverse_proxy http://localhost:8384 {
-            header_up Host localhost
-          }
-          tls internal
-        }
-      caddy_systemd_capabilities_enabled: true
-      caddy_systemd_capabilities: "CAP_NET_BIND_SERVICE"
-# Caddy cannot start without this
-# https://askubuntu.com/questions/1239503/ubuntu-20-04-and-20-10-etc-securetty-no-such-file-or-directory
+    - import_tasks: tasks/proxmox_vm.yml
+ 
+- hosts: apps
+  become: true
+  tasks:
+    - import_tasks: tasks/paperless.yml
+    - import_tasks: tasks/homer.yml
+    - import_tasks: tasks/uptime_kuma.yml
+    - import_tasks: tasks/tandoor.yml
+    - import_tasks: tasks/nextcloud.yml
